# drive-uploader

./: .env.example  .gitignore  .importlinter  AGENTS.md  CLAUDE.md  Makefile  README.md  drive-uploader.spec  flow_diagram.drawio  make.ps1  pyproject.toml
.github/workflows/: release.yml
adr/: 001-hexagonal-ports-and-adapters.md  002-binary-distribution.md  README.md
docs/agents/: domain.md  issue-tracker.md
src/application/use_cases/: enqueue_file.py  process_queue.py  upload_file.py
src/bootstrap/: dependency_container.py  init_config.py  main.py  version_check.py
src/domain/entities/: upload_job.py
src/domain/ports/: drive_uploader.py  on_file_detected.py  queue_repository.py  upload_dispatcher.py  worker_pool.py
src/domain/value_objects/: upload_status.py
src/infrastructure/drive/: google_drive_adapter.py
src/infrastructure/filesystem/: watchdog_adapter.py
src/infrastructure/persistence/: sqlite_repository.py
src/infrastructure/threading/: worker_pool.py
src/shared/: config.py  env.py  paths.py
tests/: conftest.py  test_config.py  test_enqueue_file.py  test_env.py  test_init_config.py  test_paths.py  test_process_queue.py  test_sqlite_repository.py  test_upload_file.py  test_version_check.py  test_watchdog_adapter.py  test_worker_pool.py
